fixed background box weird alignment with text in intro

--- a/src/components/Intro.css
+++ b/src/components/Intro.css
@@ -41,7 +41,7 @@
 .intro-box {
   height: 80rem;
   width: 40rem;
-  margin-left: 20rem;
+  margin-left: 15rem;
   position: absolute;
   background-color: #FFF6E3;
   z-index: -1;
